<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_nano_apps"
        android:layout_marginBottom="@dimen/header_bottom_margin"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_streamer_button"
        android:layout_marginBottom="@dimen/project_button_bottom_margin"
        android:background="@color/project_button"
        android:width="@dimen/project_button_width"
        android:padding="@dimen/project_button_padding"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/scores_app_button"
        android:layout_marginBottom="@dimen/project_button_bottom_margin"
        android:background="@color/project_button"
        android:width="@dimen/project_button_width"
        android:padding="@dimen/project_button_padding"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/library_app_button"
        android:layout_marginBottom="@dimen/project_button_bottom_margin"
        android:background="@color/project_button"
        android:width="@dimen/project_button_width"
        android:padding="@dimen/project_button_padding"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger_button"
        android:layout_marginBottom="@dimen/project_button_bottom_margin"
        android:background="@color/project_button"
        android:width="@dimen/project_button_width"
        android:padding="@dimen/project_button_padding"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_reader_button"
        android:layout_marginBottom="@dimen/project_button_bottom_margin"
        android:background="@color/project_button"
        android:width="@dimen/project_button_width"
        android:padding="@dimen/project_button_padding"
        android:layout_gravity="center_horizontal" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone_button"
        android:layout_marginBottom="@dimen/project_button_bottom_margin"
        android:background="@color/cap_project_button"
        android:textColor="@color/cap_project_text"
        android:width="@dimen/project_button_width"
        android:padding="@dimen/project_button_padding"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
